Fix socials alignment

--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,12 @@ html {
 
 .socials {
   display: flex;
-  justify-content: center;
   margin-top: -1rem;
+  margin-left: -0.5rem;
 }
 
 .socials a {
   margin: 0.5rem;
-  
   font-size: 2rem;
   transition-property: opacity, transform;
   will-change: opacity, transform;
@@ -104,6 +103,11 @@ html {
 
   .name-text, .position-text, .description-paragraph{
     text-align: center;
+  }
+
+  .socials {
+    justify-content: center;
+    margin-left: 0rem;
   }
 
   .button-box {
